kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: django-app
  labels:
    app: django
